--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ data/plots/
 data/plots_relative_full/
 data/paired_trajectories/
 data/paired_trajectories_insert_place/
+data/warped_trajectories/
 wandb/
