DTW script seems to be working but data may need smoothing/filtering to avoid errant movement. Create script for plotting warped trajectories

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ data/plots_relative_full/
 data/paired_trajectories/
 data/paired_trajectories_insert_place/
 data/warped_trajectories/
+data/plots_warped_full/
 wandb/
